# collatz_benchmark

./: Cargo.toml
src/: main.rs
src/algos/: mod.rs
