[package]
name = "collatz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-format = { version = "0.4.3", features = ["with-num-bigint"] }
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2.15"
indicatif = "0.17.2"
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1.6"
